Terraform_Aws/terraform_real_life_production_project/module/network/vpc/main.tf
########### Virtual Private Cloud #######

resource "aws_vpc" "vpc" {
    cidr_block = var.vpc_cidr
    enable_dns_support = true
    enable_dns_hostnames = true

    tags = merge(
        local.common_tags,{
          Name = "${var.name}-vpc"
        }
    )
    }

############ Internet Gateway #####

resource "aws_internet_gateway" "igw" {

    vpc_id = aws_vpc.vpc.id

    tags = merge(
        local.common_tags, {
            Name = "${var.name}-igw"
        }
    )
  
}

######################### Public subnets #################

resource "aws_subnet" "public"{

    count = length(var.public_subnets)
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.public_subnets[count.index]
    availability_zone = var.azs[count.index]
    map_public_ip_on_launch = true

    tags = merge(
        local.common_tags, {
            Name = "${var.name}-public_subnets-${var.azs[count.index]}"
            Tier = "public"
        }
    )
   
}

######################### Private subnets #################

resource "aws_subnet" "private"{

    count = length(var.private_subnets)
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.private_subnets[count.index]
    availability_zone = var.azs[count.index]
    map_public_ip_on_launch = true

    tags = merge(
        local.common_tags, {
            Name = "${var.name}-private_subnets-${var.azs[count.index]}"
            Tier = "private"
        }
    )
   
}

######################### Db Private subnets #################

resource "aws_subnet" "db"{

    count = length(var.db_private_subnets)
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.db_private_subnets[count.index]
    availability_zone = var.azs[count.index]
    map_public_ip_on_launch = true

    tags = merge(
        local.common_tags, {
            Name = "${var.name}-db_private_subnets-${var.azs[count.index]}"
            Tier = "db"
        }
    )
   
}


############## Elastic Ip address #############

resource "aws_eip" "eip"{
    count = local.nat_gateway_count
    domain =  "vpc"
    tags = merge(
        local.common_tags, {
            Name = "${var.name}-epi-${count.index}"
        }
    )

}

#################### NAT gateway ################

resource "aws_nat_gateway" "nat"{
    depends_on = [ aws_internet_gateway.igw ]
    count = local.nat_gateway_count
    allocation_id = aws_eip.eip[count.index].id
    subnet_id = aws_subnet.public[var.single_nat_gateway ? 0 : count.index].id

    tags = merge(
        local.common_tags, {
            Name = "${var.name}-nat-${count.index}"
        }
    )
}

################ Route tables public subnets #####

resource "aws_route_table" "public_rt" {

    vpc_id = aws_vpc.vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags =  merge(
        local.common_tags, {
            Name = "${var.name}-public_rt"
        }
    )

}

###################### Route tables ############

resource "aws_route_table_association" "public_ass"{
    route_table_id = aws_route_table.public_rt.id
    count = length(aws_subnet.public)
    subnet_id = aws_subnet.public[count.index].id
}

################ Route tables privates #####
resource "aws_route_table" "private_rt" {

    vpc_id = aws_vpc.vpc.id

    count = local.nat_gateway_count

    route {
        cidr_block = "0.0.0.0/0"

        nat_gateway_id = aws_nat_gateway.nat[count.index].id

    }

    tags = merge(
        local.common_tags,{
            Name = "$(var.name)-private-rt-${count.index}"
        }
    )
    
}

################## Route table association ##############

resource "aws_route_table_association" "private" {
    route_table_id =  aws_route_table.private_rt[var.single_nat_gateway ? 0 : count.index].id
    

    count = length(aws_subnet.private)
    subnet_id = aws_subnet.private[count.index].id 

}
